Change name to DM

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          Значение атрибута content "width=device-width" - показывать веб сайт по всей ширине экрана -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Тег <title> - Задается название страницы -->
-    <title>Azarchanka Dzmitry</title>
+    <title>Mikhailau Daniil</title>
     <!-- Тег <link>   - Задается ссылка к файлу (ссылка на библиотеку Bootstrap с различными стилями) -->
     <!-- Атрибут href - Здесь указывается ссылка на файл с стилями -->
     <!-- Атрибут rel  - задается отношение между внешним документом и нашим документом (Набор стилей CSS) -->
