--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          Значение атрибута content "width=device-width" - показывать веб сайт по всей ширине экрана -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Тег <title> - Задается название страницы -->
-    <title>Mikhailau Daniil</title>
+    <title>Azarchanka Dzmitry</title>
     <!-- Тег <link>   - Задается ссылка к файлу (ссылка на библиотеку Bootstrap с различными стилями) -->
     <!-- Атрибут href - Здесь указывается ссылка на файл с стилями -->
     <!-- Атрибут rel  - задается отношение между внешним документом и нашим документом (Набор стилей CSS) -->
@@ -27,9 +27,23 @@
       crossorigin="anonymous"
     ></script>
     <!-- Добавление иконки во вкладке -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- Тег <style> - Создание нового стиля -->
     <style>
@@ -59,7 +73,7 @@
         <!-- Значение атрибута class "navbar-brand" - Логотип в навигационном пространстве
              Значение атрибута class "p-0" - отступ логотипа свергу и снизу. Мы его убрали.
              Значение атрибута href "/" - ссылка на корневую страницу веб сайта -->
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="index.html">
           <!-- Значение атрибута src "logo.png" - Ссылка на логотип для навигационного пространства
                Значение атрибута width "40"     - Размер логотипа в пикселях -->
           <img src="logo.png" alt="Logo" width="40" />
@@ -81,7 +95,9 @@
             <!-- Тег <li> - Создание элемента списка -->
             <li class="nav-item">
               <!-- Значение атрибута class "active" - Делает кнопку активной, подсвечивая её -->
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <!-- Значение атрибута href "places.html" - Ссылка на вторую страницу нашего сайта -->
