--- a/places.html
+++ b/places.html
@@ -16,9 +16,23 @@
       crossorigin="anonymous"
     ></script>
     <!-- Добавление иконки во вкладке -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <style>
       /* Изменяем стиль CSS из библиотеки Bootstrap (.card) под свои нужды */
@@ -51,7 +65,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="index.html">
           <img src="logo.png" alt="Logo" width="40" />
         </a>
         <button
@@ -68,7 +82,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <!-- Значение атрибута class "active" - Делает кнопку активной, подсвечивая её -->
@@ -81,17 +95,17 @@
     <!-- Добавляем контейнер -->
     <div class="container my-5">
       <!-- Значение атрибута class "row"           - Добавляем строку в контейнер которую можно разбить на колонки
-           Значение атрибута class "row-cols-1"    - На всех остальных устройствах, кроме указанных, будет отображаться 1 колонка
-           Значение атрибута class "row-cols-md-2" - На планшетах будет отображаться 2 колонки
-           Значение атрибута class "row-cols-lg-3" - На мониторах будет отображаться 3 колонки
-           Значение атрибута class "g-5"           - Добавление отступов между колонками -->
+             Значение атрибута class "row-cols-1"    - На всех остальных устройствах, кроме указанных, будет отображаться 1 колонка
+             Значение атрибута class "row-cols-md-2" - На планшетах будет отображаться 2 колонки
+             Значение атрибута class "row-cols-lg-3" - На мониторах будет отображаться 3 колонки
+             Значение атрибута class "g-5"           - Добавление отступов между колонками -->
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <!-- Добавляется первая колонка в строку -->
         <div class="col">
           <!-- Добавляем карточку 1 в первую колонку -->
           <div class="card">
             <!-- Добавляем фото с сайта picsum.photos
-                 https://Сайт/id/номерid/размер в пикселях -->
+                   https://Сайт/id/номерid/размер в пикселях -->
             <img
               src="https://picsum.photos/id/1015/300"
               class="card-img-top"
@@ -106,8 +120,8 @@
                 doloremque cupiditate deserunt repudiandae.
               </p>
               <!-- Значение атрибута href "https://..." - Ссылка для кнопки на фото с большим разрешением
-                   Значение атрибута target "_blank" - Открытие ссылки в новом окне при нажатии на кнопку
-                   Значение атрибута class="btn btn-primary" - Добавлена форма и цвет для кнопки -->
+                     Значение атрибута target "_blank" - Открытие ссылки в новом окне при нажатии на кнопку
+                     Значение атрибута class="btn btn-primary" - Добавлена форма и цвет для кнопки -->
               <a
                 href="https://picsum.photos/id/1015/1500"
                 target="_blank"
@@ -137,8 +151,8 @@
                 href="https://picsum.photos/id/1018/1500"
                 target="_blank"
                 class="btn btn-outline-success"
-                >Large Photo</a
-              >
+                >Large Photo
+              </a>
             </div>
           </div>
         </div>
